Azure/ArmTemplates/azure-quickstart-templates-master/netapp-ontap-sql/nested/shared-resources.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "webNsgName": {
            "type": "string"
        },
        "dataNsgName": {
            "type": "string"
        },
        "diagStorageAccountName": {
            "type": "string"
        },
        "storageAccountType": {
            "type": "string"
        },
        "virtualNetworkName": {
            "type": "string"
        },
        "dataSubnetName": {
            "type": "string"
        },
        "webSubnetName": {
            "type": "string"
        },
        "addressPrefix": {
            "type": "string"
        },
        "webSubnetPrefix": {
            "type": "string"
        },
        "dataSubnetPrefix": {
            "type": "string"
        },
        "remoteAllowedCIDR": {
            "type": "string"
        },
        "NetAppTags": {
            "type": "object"
        },
        "quickstartTags": {
            "type": "object"
        }
    },
    "variables": {},
    "resources": [{
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('webNSGName')]",
            "apiVersion": "2016-03-30",
            "location": "[resourceGroup().location]",
            "comments": " NSG for Web subnet",
            "tags": {
                "displayName": "Web NSG",
                "quickstartName": "[parameters('quickstartTags').name]",
                "provider": "[parameters('NetAppTags').provider]"
            },
            "properties": {
                "securityRules": [{
                        "name": "httpRule",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "[parameters('remoteAllowedCIDR')]",
                            "destinationAddressPrefix": "[parameters('webSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "rdpRule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[parameters('remoteAllowedCIDR')]",
                            "destinationAddressPrefix": "[parameters('webSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('dataNSGName')]",
            "apiVersion": "2016-03-30",
            "location": "[resourceGroup().location]",
            "comments": " NSG for Data subnet, does not allow any traffic from Internet(Default Rule)",
            "tags": {
                "displayName": "Data NSG",
                "quickstartName": "[parameters('quickstartTags').name]",
                "provider": "[parameters('NetAppTags').provider]"
            },
            "properties": {}
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('diagStorageAccountName')]",
            "apiVersion": "2016-01-01",
            "location": "[resourceGroup().location]",
            "comments": "Storage account used to store the Web VM disks",
            "tags": {
                "displayName": "Web VM Storage Account",
                "quickstartName": "[parameters('quickstartTags').name]",
                "provider": "[parameters('NetAppTags').provider]"
            },
            "sku": {
                "name": "[parameters('storageAccountType')]"
            },
            "kind": "Storage",
            "properties": {

            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworkName')]",
            "apiVersion": "2016-03-30",
            "location": "[resourceGroup().location]",
            "comments": "Virtual network for overall solution",
            "tags": {
                "displayName": "Virtual Network",
                "quickstartName": "[parameters('quickstartTags').name]",
                "provider": "[parameters('NetAppTags').provider]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('webNSGName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('dataNsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "subnets": [{
                        "name": "[parameters('webSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('webSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('webNSGName'))]"
                            }
                        }
                    },
                    {
                        "name": "[parameters('dataSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('dataSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('dataNsgName'))]"
                            }
                        }
                    }

                ]
            }
        }


    ]
}
